# matrix-rust

./: Cargo.toml  LICENSE  README.md
src/: matrix.rs
tests/: add.rs  division.rs  multiplication.rs  substraction.rs
