[package]
name = "matrix"
version = "0.1.0"
authors = ["TK Lai <iam@tklai.net>"]
description = """
A simple matrix addition, subtraction and multiplication library.
"""
homepage = "https://github.com/tklai/matrix-rust"
repository = "https://github.com/tklai/matrix-rust"
readme = "./README.md"
keywords = ["matrix"]
license = "MIT"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
